# CardioSphere

./: .gitignore  CARDIOSPHERE_README.md  LICENSE  README.md  docker-compose.yml  enrichment.py  render.yaml
backend/: .dockerignore  .env.example  config.py  database.py  main.py  pyproject.toml  requirements.txt
backend/middleware/: clerk_auth.py
backend/ml/: train_model.py
backend/models/: ai_planner.py  community.py  medication.py  prediction.py  user.py
backend/routes/: ai_planner.py  auth.py  community.py  dashboard.py  hospitals.py  medication.py  prediction.py
backend/services/: ml_service.py  notification_service.py  openai_service.py  prescription_service.py  scheduler_service.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend-v2/: .dockerignore  .env.example  .env.local  .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend-v2/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend-v2/src/app/(app)/: layout.tsx
frontend-v2/src/components/: AuthSync.tsx  Sidebar.tsx  TimeWheelPicker.tsx
frontend-v2/src/lib/: api.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Sidebar.tsx
model/: .gitignore  app.py  dheeraj.py  predict.py  pyproject.toml  requirements.txt  test.py  train.py
website/: next.config.js  package-lock.json  package.json  tailwind.config.js
website/src/app/: globals.css  layout.js  loading.js  page.js
website/src/models/: article.js  form.js  user.js
(+54 files in other folders)
