[project]
name = "cardiosphere-model"
version = "1.0.0"
description = "CardioSphere heart disease prediction API"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "joblib>=1.4.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",   # for testing FastAPI endpoints
    "pytest>=8.3.0",
]

[tool.uv]
package = false
